src/App.scss
@import "~bootstrap/scss/bootstrap";
$corner-roundedness: 20px;
$max-app-width: 1200px;
$pagination-button-width: 2rem;

.App {
  text-align: center;
  vertical-align: middle;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 12vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-footer {
  background-color: #282c34;
  min-height: 7vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px);
  color: white;
}

.user-ribbon {
  margin-bottom: 1rem;
  background-color: #282c34de;

  .ribbon-container {
    max-width: $max-app-width;
  }

  .ribbon-button {
    margin: 0.5rem 1rem 0.5rem 1rem;
    width: 8rem;
  }
}

.col-left {
  text-align: left;
  vertical-align: middle;
  margin: auto;
}

.col-right {
  text-align: right;
  vertical-align: middle;
  margin: auto;
}

.spinner-div {
  text-align: center;
}

.ProductList {
  justify-content: center;
  border-radius: $corner-roundedness;
  max-width: $max-app-width;

  .row {
    border: 1px solid rgba(0, 0, 0, 0.125);
    margin: 1rem;
  }

  .ProductFilters {
    padding: 0.5rem;
    background-color: rgba(0, 0, 0, 0.03);
    border: 1px solid rgba(0, 0, 0, 0.125);

    .input-group {
      text-transform: capitalize;
    }

    .page-number-text {
      font-size: calc(10px + 0.5vmin);
      color:rgba(0, 0, 0, 0.6);
      margin: auto;
      vertical-align: middle;
    }
    
    li {
      width: $pagination-button-width;
    }

    ul {
      margin: auto;
      width: $pagination-button-width * 7;
    }

    
  }
}

.ProductCard {
  margin: 1rem;
  justify-content: center;
  height: 40rem;

  img {
    width: 90%;
    height: 15rem;
    object-fit: contain;
    padding: 0.5rem;
    margin: auto;
  }

    .card-text {
      max-height: 10rem;
      overflow: auto;  
    }

  .card-header {
    text-transform: capitalize;
  }
}

.App-link {
  color: #61dafb;
}

